SERVER-18955 Have ShardedClientCursor set the batch size before all calls

comment update